--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   },
   "dependencies": {
     "pinia": "^2.1.6",
+    "sass": "^1.68.0",
+    "vity-ui": "^1.0.8",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4"
   },
