--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,9 @@
 {
   "files": [],
+  "compilerOptions":{
+    "types": [  "vite/client" ],
+  },
+  
   "references": [
     {
       "path": "./tsconfig.node.json"
