--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@highlightjs/vue-plugin": "^2.1.0",
+    "highlight.js": "^11.9.0",
     "pinia": "^2.1.6",
     "sass": "^1.68.0",
-    "vity-ui": "^1.0.28",
+    "vity-ui": "^1.0.29",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4"
   },
